# flint

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
examples/: basic.py  distributed.py  streaming.py  streaming_distributed.py  workload.py
flint/: __init__.py  dataframe.py  session.py  utils.py
flint/executor/: driver.py  executor.py  queue.py  scheduler.py  task.py
flint/io/: arrow.py  fs.py
flint/planner/: node.py  optimizer.py  planner.py
flint/streaming/: __init__.py  dataframe.py  loop.py  sinks.py  sources.py
flint/telemetry/: __init__.py  logger.py  observer.py
observability/grafana/provisioning/dashboards/: ray.yml
tests/: conftest.py  test_dataframe.py  test_executor.py  test_planner.py  test_reader.py  test_streaming.py  test_streaming_integration.py
