[tool.setuptools.packages.find]
include = ["flint*"]

[project]
name = "flint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "fsspec>=2026.2.0",
    "pandas>=3.0.1",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
    "ray[client]>=2.54.0",
    "ruff>=0.15.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
